attempt to fix whitespace under nav in detail view

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -429,14 +429,14 @@ ul {
 /************************************/
 
 .gift-detail-container {
-  padding: 20px;
+  /*padding: 20px;*/
   max-width: 80%;
   border-style: solid;
   border-color: #BBB;
 }
 
 .detail-main {
-  padding-top: 90px;
+  padding-top: 20px;
 }
 
 .detail-wrapper {
